--- a/Students.App/App.xaml
+++ b/Students.App/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Students.App"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Authorization/Authorization.xaml">
     <Application.Resources>
          
     </Application.Resources>
