--- a/Students.App/MainWindow.xaml
+++ b/Students.App/MainWindow.xaml
@@ -9,10 +9,12 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <TabControl x:Name="TabControl_User">
+            
             <TabItem x:Name="TabItem_Student"
                      Header="Студент">
-                <component:Student/>
+                <StackPanel x:Name="Panel_Student"></StackPanel>
             </TabItem>
+            
             <TabItem x:Name="TabItem_Teacher"
                      Header="Преподаватель">
                 <Grid>
@@ -22,10 +24,9 @@
                     </Grid.ColumnDefinitions>
                     
                     <ListBox Grid.Column="0"></ListBox>
-                    
-                    <component:Student Grid.Column="1"></component:Student>
                 </Grid>
             </TabItem>
+            
             <TabItem x:Name="TabItem_Admin"
                      Header="Администратор">
                 <Grid>
@@ -35,10 +36,9 @@
                     </Grid.ColumnDefinitions>
                     
                     <ListBox Grid.Column="0"></ListBox>
-                    
-                    <component:Student Grid.Column="1"></component:Student>
                 </Grid>
             </TabItem>
+            
         </TabControl>
     </Grid>
 </Window>
